[jobs-api] refactor quota models
* simplify all quota models
* fix tests

Bug: T389118
